Appointment and daily report fix